Require JS structure

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -16,14 +16,14 @@
                 <ion-item nav-clear menu-close ng-click="login()">
                     Login
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/playlists">
+                <ion-item nav-clear menu-close href="#/app/headlines">
                     Headlines
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/search">
-                    GDP
+                <ion-item nav-clear menu-close href="#/app/economy">
+                    Economy
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/browse">
-                    News
+                <ion-item nav-clear menu-close href="#/app/markets">
+                    Markets
                 </ion-item>
             </ion-list>
         </ion-content>
